--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,14 @@ homepage: https://github.com/Ampless/robustirc.dart
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  dns_client: ^0.2.0
+  http: ^0.13.1
 
 dev_dependencies:
   pedantic: ^1.11.0
   test: ^1.16.8
+
+dependency_overrides:
+  dns_client:
+    git: https://github.com/Ampless/dns_client.git
