--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: robustirc
 description: A RobustIRC implementation in Dart
-version: 0.0.3
+version: 0.1.0-alpha.0
 homepage: https://github.com/Ampless/robustirc.dart
 
 environment:
