--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: robustirc
 description: An implementation of a RobustSession/RobustIRC client in Dart
-version: 0.1.0-alpha.5
+version: 0.1.0
 homepage: https://github.com/Ampless/robustirc.dart
 
 environment:
@@ -11,4 +11,4 @@ dependencies:
 
 dev_dependencies:
   pedantic: ^1.11.0
-  test: ^1.17.2
+  test: ^1.17.5
