--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: robustirc
 description: An implementation of a RobustSession/RobustIRC client in Dart
-version: 0.1.0
+version: 0.1.1
 homepage: https://github.com/Ampless/robustirc.dart
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ^3.0.0
 
 dependencies:
-  http: ^0.13.1
+  http: ^1.0.0
 
 dev_dependencies:
-  pedantic: ^1.11.0
-  test: ^1.17.5
+  lints: ^5.0.0
+  test: ^1.24.0
